2008-09-09  Dan Williams  <dcbw@redhat.com>

	* src/connection-editor/nm-connection-list.c
		- (remove_connection): clean up left-over VPN secrets when removing the
			connection
		- (add_connection, update_connection): save VPN secrets for user-scope
			connections

	* src/connection-editor/nm-connection-editor.c
		- (ui_to_setting, connection_editor_validate): validate and update the
			'connection' setting just like any other setting
		- (populate_connection_ui): hook up signals for notification of when
			'connection' setting properties change; connection scope needs to be
			up-to-date before any other settings are validated
		- (nm_connection_editor_save_vpn_secrets): ask the VPN page to ask the
			plugin to save its secrets

	* src/connection-editor/page-vpn.c
		- (ce_page_vpn_save_secrets): call VPN UI plugin's hook to save secrets

2008-09-05  Dan Williams  <dcbw@redhat.com>

	Fix an NMAccessPoint leak due to erroneous handling of the active AP and
	reference counts, and actually track signal strength for the active AP when
	it changes.

	* src/applet.h
		- Remove global "current_ap" since each wifi device has its own active AP

	* src/applet-device-wifi.c
		- (update_active_ap): new function; update internal idea of the current
			active AP for the device and attach signal strength handler.
			Instead of holding references to the active AP like before (when
			the code was in wireless_device_state_changed()), just tag the device
			with the AP object.  The reference was useless since its only purpose
			was to keep the AP object around for monitoring strength, but the
			strength monitor won't be triggered any more when the AP is disposed
			anyway.
		- (wireless_device_state_changed): move active AP code to
			update_active_ap()
		- (wireless_get_icon): get active AP off the device, not the removed
			global "current_ap"
		- (wireless_device_added, access_point_removed_cb): be sure to clean up
			when an active AP goes away